# obs-studio-plugin-nvenc

./: CMakeLists.txt  README.md  obs-nvenc-helper.c  obs-nvenc-optional.c  obs-nvenc-plugin-main.c  obs-nvenc.c  obs-nvenc.h
data/locale/: en-US.ini
